syntax = "proto3";

package telempb;

option go_package = "github.com/synnaxlabs/x/telem/telempb;telempb";

message TimeRange {
    int64 start = 1;
    int64 end = 2;
}

message Series {
    TimeRange time_range = 1;
    string data_type = 2;
    bytes data = 3;
}
